--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	<div id="canvas_container">
 		<canvas id="game_canvas"></canvas>
 	</div>
-	<script src="script.js"></script>
+	<script src="scripts/require.js"></script>
 </body>
 </html>
