--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-	<style>
-		#canvas_container{margin: 40px auto 40px auto; width: 800px; height: 600px; border: 1px solid #333;}
-	</style>
-  <script data-main="scripts/main" src="scripts/require.js"></script>
-</head>
-<body>
-	<div id="canvas_container">
-		<canvas id="game_canvas"></canvas>
-	</div>
-</body>
+  <head>
+    <style>
+      #canvas_container
+      {
+        margin: 40px auto;
+        width: 800px;
+        height: 600px;
+        border: 1px solid #333;
+      }
+    </style>
+    <script data-main="scripts/main" src="scripts/require.js"></script>
+  </head>
+  <body>
+    <div id="canvas_container">
+      <canvas id="game_canvas"></canvas>
+    </div>
+  </body>
 </html>
